--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
       }
     </style>
 
-    <link rel="icon" type="image/x-icon" href="/static/skills.ico">
+    <link rel="icon" type="image/x-icon" href="/public/skills.ico">
   </head>
   <body>
     <div id="app"></div>
