#26 fixing various vue cli 3 changes with regard to resource sub directories

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,7 +13,7 @@
       }
     </style>
 
-    <link rel="icon" type="image/x-icon" href="/public/skills.ico">
+    <link rel="icon" type="image/x-icon" href="<%= BASE_URL %>skills.ico">
   </head>
   <body>
     <div id="app"></div>
