--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,7 +18,7 @@ limitations under the License.
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>User Skills</title>
+    <title>SkillTree Dashboard</title>
 
     <style type="text/css">
       .skills-icon {
