#133: improved color usage

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -28,7 +28,7 @@ limitations under the License.
       }
     </style>
 
-    <link rel="icon" type="image/x-icon" href="<%= BASE_URL %>skills.ico">
+    <link rel="icon" type="image/x-icon" href="<%= BASE_URL %>skilltree.ico">
   </head>
   <body>
     <div id="app"></div>
