--- a/client-display/public/index.html
+++ b/client-display/public/index.html
@@ -26,7 +26,7 @@ limitations under the License.
     <noscript>
       <strong>We're sorry but user-skills doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app" role="main" aria-label="SkillTree Client Display"></div>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
