#411: show a warning when JS is disabled

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -15,23 +15,33 @@ limitations under the License.
 -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>SkillTree Dashboard</title>
 
     <style type="text/css">
-      .skills-icon {
-        display: inline-block;
-        height: 48px;
-        width: 48px;
-      }
+        .skills-icon {
+            display: inline-block;
+            height: 48px;
+            width: 48px;
+        }
     </style>
 
     <link rel="icon" type="image/x-icon" href="<%= BASE_URL %>skilltree.ico">
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <noscript>
+        <div style="text-align: center;">
+            <h1>
+                Javascript Disabled
+            </h1>
+            <p>We're sorry but SkillTree <b>doesn't work properly without JavaScript
+                enabled</b>. Please enable it to continue.
+            </p>
+        </div>
+    </noscript>
+</head>
+<body>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
